--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@types/dotenv": "^8.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
