--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: 722692031100.dkr.ecr.ap-northeast-2.amazonaws.com/loark-bot           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: loark-bot           # set this to your Amazon ECR repository name
   ECS_SERVICE: loark-bot-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: discord-loark-bot                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: loark-bot.json # set this to the path to your Amazon ECS task definition
