:wrench: Update aws.yml, loark-bot-task-definition.json

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,9 +33,9 @@ on:
 env:
   AWS_REGION: ap-northeast-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: loark-bot           # set this to your Amazon ECR repository name
-  ECS_SERVICE: loark-bot-service                 # set this to your Amazon ECS service name
+  ECS_SERVICE: loark-bot-service-nestjs                 # set this to your Amazon ECS service name
   ECS_CLUSTER: discord-loark-bot                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: loark-bot.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: loark-bot-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: loark-bot           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
