--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,7 +9,7 @@ env:
   ECR_REPOSITORY: loark-bot-repository           # set this to your Amazon ECR repository name
   ECS_SERVICE: loark-bot-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: loark-bot-cluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ./aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: loark-bot-container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
