--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/dotenv": "^8.2.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.3",
